[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Menus/Arcade/VBox_Arcade_Player_End.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Pawns/Robit_Pawn-01-01.png" type="Texture" id=2]
[ext_resource path="res://misc/line-text.tres" type="DynamicFont" id=3]

[node name="VBox_Arcade_Player_End" type="VBoxContainer"]
margin_left = 839.0
margin_right = 1073.0
margin_bottom = 743.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
editor/display_folded = true
margin_right = 234.0
margin_bottom = 183.0
size_flags_horizontal = 7
size_flags_vertical = 7
size_flags_stretch_ratio = 0.33

[node name="Sprite" type="Sprite" parent="MarginContainer"]
position = Vector2( 117, 75 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
vframes = 5
hframes = 16

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 187.0
margin_right = 234.0
margin_bottom = 743.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxName" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_right = 234.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxName"]
margin_top = 7.0
margin_right = 148.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "player :"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxName"]
margin_left = 152.0
margin_right = 222.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/HBoxName"]
margin_left = 226.0
margin_top = 7.0
margin_right = 234.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "1"
align = 2

[node name="HBoxScore" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 56.0
margin_right = 234.0
margin_bottom = 108.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxScore"]
margin_top = 7.0
margin_right = 128.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "Score :"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxScore"]
margin_left = 132.0
margin_right = 210.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/HBoxScore"]
margin_left = 214.0
margin_top = 7.0
margin_right = 234.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2

[node name="HBoxKills" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 112.0
margin_right = 234.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxKills"]
margin_top = 7.0
margin_right = 116.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "kills :"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxKills"]
margin_left = 120.0
margin_right = 210.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/HBoxKills"]
margin_left = 214.0
margin_top = 7.0
margin_right = 234.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2

[node name="HBoxDeaths" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 168.0
margin_right = 234.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxDeaths"]
margin_top = 7.0
margin_right = 148.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "deaths :"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxDeaths"]
margin_left = 152.0
margin_right = 210.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/HBoxDeaths"]
margin_left = 214.0
margin_top = 7.0
margin_right = 234.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2

[node name="HBoxKDR" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 224.0
margin_right = 234.0
margin_bottom = 276.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxKDR"]
margin_top = 7.0
margin_right = 114.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "k/d  :"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxKDR"]
margin_left = 118.0
margin_right = 210.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/HBoxKDR"]
margin_left = 214.0
margin_top = 7.0
margin_right = 234.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2

[node name="HBoxShots" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 280.0
margin_right = 234.0
margin_bottom = 332.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxShots"]
margin_top = 7.0
margin_right = 128.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "shots :"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxShots"]
margin_left = 132.0
margin_right = 210.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/HBoxShots"]
margin_left = 214.0
margin_top = 7.0
margin_right = 234.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2

[node name="HBoxHits" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 336.0
margin_right = 234.0
margin_bottom = 388.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxHits"]
margin_top = 7.0
margin_right = 96.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "hits :"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxHits"]
margin_left = 100.0
margin_right = 210.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/HBoxHits"]
margin_left = 214.0
margin_top = 7.0
margin_right = 234.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2

[node name="HBoxMisses" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 392.0
margin_right = 234.0
margin_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxMisses"]
margin_top = 7.0
margin_right = 142.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "misses :"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxMisses"]
margin_left = 146.0
margin_right = 210.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/HBoxMisses"]
margin_left = 214.0
margin_top = 7.0
margin_right = 234.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2

[node name="HBoxHitPer" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 448.0
margin_right = 234.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxHitPer"]
margin_top = 7.0
margin_right = 122.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "hit % :"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxHitPer"]
margin_left = 126.0
margin_right = 210.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/HBoxHitPer"]
margin_left = 214.0
margin_top = 7.0
margin_right = 234.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 3 )
text = "0"
align = 2

[node name="HBoxPlace" type="HBoxContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 504.0
margin_right = 234.0
margin_bottom = 556.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxPlace"]
margin_left = 67.0
margin_top = 7.0
margin_right = 167.0
margin_bottom = 44.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 3 )
text = "Place"
align = 1
